filling in html content
Changing content

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Matthew Fish</h1>
+            <h2>Business and Computer Science DOuble Degree</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -87,10 +87,14 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>Smile.io</h3>
+                <h4>Marketing & Analytics</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Worked on the prouct marketing team at Smile.io, a world leading loyalty program provider. During my time at Smile, some significant projects were:
+                    <li>Analyzed pricing structure for company, and determined ways to increase software upgrade revenue</li>
+                    <li>Created calculator web app backend to estimate a businesses key performance indicators before and after implementing a loyalty strategy</li>
+                    <li>Wrote 20+ blog posts, curated companies Facebook, Twitter and Linkedin presences</li>
+
                 </p>
             </div>
 
