--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <html>
 <head>
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <meta name="title" content="Razi Syed" />
-    <meta name="author" content="Razi Syed" />
-    <meta name="description" content="Business Technology Management student, Software Developer, and Photographer based in Toronto." />
-    <meta name="Copyright" content="Razi Syed 2017" />
-    <meta name="keywords" content="Razi Syed, personal site, developer, Ryerson, developer, photography, pictures, Toronto, Mississauga, Ted Rogers" />
+    <meta name="title" content="Matt Fish" />
+    <meta name="author" content="Matt Fish" />
+    <meta name="description" content="Business and Computer Science Double Degree Student, Front End/ UX Developer, and Photographer based in Waterloo, ON." />
+    <meta name="Copyright" content="Matt Fish 2018" />
+    <meta name="keywords" content="Matt Fish, Laurier, Rugby, Photographer, developer, front end, lazaridis, computer science, harvard" />
     <meta name="theme-color" content="#4B4F56" />
     <meta property='og:image' content='http://typicalmitul.com/img/portfolio-7.jpg' />
 
-    <title>Razi Syed</title>
+    <title>Matt Fish</title>
 
     <!-- stylesheets -->
     <link href="css/foundation.min.css" rel="stylesheet" type="text/css">
@@ -60,17 +60,16 @@
                                 <div id="my-photo"></div>
                             </div>
                             <div class="large-6 columns">
-                                <h1>RAZI SYED</h1>
+                                <h1>MATT FISH</h1>
                             </div>
                         </div>
                         <div id="social-links-wrapper">
                             <ul class="social-links">
-                                <li><a href="https://github.com/razisyed97"><i class="fa fa-github-square fa-fw"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/razisyed1/"><i class="fa fa-linkedin-square fa-fw"></i></a></li>
-                                <li><a href="https://drive.google.com/file/d/0B0F8TlUdCooLaXhaN0pieFZfbk0/view?usp=sharing"><i class="fa fa-file-pdf-o fa-fw"></i></a></li>
-                                <li><a href="https://instagram.com/http.razi"><i class="fa fa-instagram fa-fw"></i></a></li>
-                                <li><a href="https://httprazi.com"><i class="fa fa-camera fa-fw"></i></a></li>
-                                <li><a href="https://open.spotify.com/user/razisyed"><i class="fa fa-spotify fa-fw"></i></a></li>
+                                <li><a href="https://github.com/mattfishh"><i class="fa fa-github-square fa-fw"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/matt-fish/"><i class="fa fa-linkedin-square fa-fw"></i></a></li>
+                                <li><a href="https://drive.google.com/file/d/1w8gmtvOfzqoMwUkKF8gH-MEDwHiuL3O1/view"><i class="fa fa-file-pdf-o fa-fw"></i></a></li>
+                                <li><a href="https://instagram.com/mattfishh"><i class="fa fa-instagram fa-fw"></i></a></li>
+                                <li><a href="https://ocevns.tumblr.com"><i class="fa fa-camera fa-fw"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -82,39 +81,38 @@
                         </div>
                         <div id="terminal">
                             <span class="input">>>></span> location<br />
-                            <span class="string">Toronto, ON</span><br /><br />
+                            <span class="string">Waterloo, ON</span><br /><br />
 
                             <span class="input">>>></span> education<br />
                             {<br />
-                            &nbsp;&nbsp; "<span class="string">school</span>": "<span class="string">Ryerson University</span>",<br />
-                            &nbsp;&nbsp; "<span class="string">major</span>": "<span class="string">business technology management</span>",<br />
-                            &nbsp;&nbsp; "<span class="string">minor</span>": "<span class="string">finance</span>",<br />
-                            &nbsp;&nbsp; "<span class="string">graduating</span>": "<span class="string">April 2020</span>"<br />
+                            &nbsp;&nbsp; "<span class="string">school</span>": "<span class="string">Wilfrid Laurier University</span>",<br />
+                            &nbsp;&nbsp; "<span class="string">degree1</span>": "<span class="string">business administration</span>",<br />
+                            &nbsp;&nbsp; "<span class="string">degree2</span>": "<span class="string">computer science</span>",<br />
+                            &nbsp;&nbsp; "<span class="string">graduating</span>": "<span class="string">April 2021</span>"<br />
                         }<br /><br />
 
                         <span class="input">>>></span> employment<br />
                         {<br />
-                        &nbsp;&nbsp; "<span class="string">current1</span>": "<span class="string">software developer intern @ Knockri</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">current2</span>": "<span class="string">customer service representative @ Scotiabank</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">current3</span>": "<span class="string">co-founder and president @ Warm Hearts</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">current4</span>": "<span class="string">president @ RU Stargazers</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">current5</span>": "<span class="string">student senator @ Ryerson Senate - Ryerson University</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">current6</span>": "<span class="string">senate representative @ Ryerson Students' Union - Board of Directors</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">sep 2016 - apr 2017</span>": "<span class="string">first year representative @ Ryerson Students' Union - Board of Directors</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">sep 2016 - apr 2017</span>": "<span class="string">photographer @ Ted Rogers Students' Society - Marketing Committee</span>"<br />
+                        &nbsp;&nbsp; "<span class="string">current1</span>": "<span class="string">marketing & analytics @ Smile.io</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">current2</span>": "<span class="string">vp of technology @ Laurier Investment and Finance Association</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">current3</span>": "<span class="string">vp of mentorship @ Laurier Association of Double Degree Students</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">current4</span>": "<span class="string">freelance photographer</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">apr 2017 - aug 2017</span>": "<span class="string">operations analyst @ Hungry Jacks Australia</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">aug 2015 - sept 2016</span>": "<span class="string">customer service lead @ Movati Athletic</span>",<br />
+                        
                     }<br /><br />
 
                     <span class="input">>>></span> hobbies &amp;&amp; interests<br />
-                    [ "<span class="string">photography</span>", "<span class="string">web development</span>", "<span class="string">coffee</span>", "<span class="string">design</span>", "<span class="string">music</span>"]<br /><br />
+                    [ "<span class="string">photography</span>", "<span class="string">web development</span>", "<span class="string">hiking</span>", "<span class="string">design</span>", "<span class="string">poker</span>","<span class="string">rugby</span>"]<br /><br />
 
                     <span class="input">>>></span> programming languages<br />
-                    [ "<span class="string">Javascript</span>", "<span class="string">Java</span>", "<span class="string">Python</span>"]<br /><br />
+                    [ "<span class="string">Python</span>", "<span class="string">Java</span>", "<span class="string">C</span>", "<span class="string">Visual Basic</span>"]<br /><br />
 
-                    <span class="input">>>></span> frameworks<br />
-                    [ "<span class="string">ReactJS</span>", "<span class="string">AngularJS</span>", "<span class="string">Node.js</span>", "<span class="string">Bootstrap</span>", "<span class="string">Flask</span>"]<br /><br />
+                    <span class="input">>>></span> software<br />
+                    [ "<span class="string">Illustrator</span>", "<span class="string">Photoshop</span>", "<span class="string">Sketch</span>", "<span class="string">Proto.io</span>", "<span class="string">Final Cut Pro X</span>"]<br /><br />
 
                     <span class="input">>>></span> contact<br />
-                    [ "<span class="string"><a href="mailto:raziulhaque.syed@ryerson.ca">raziulhaque.syed@ryerson.ca</a></span>", "<span class="string">647 996 5524</span>" ]
+                    [ "<span class="string"><a href="mailto:fish1440@mylaurier.ca">fish1440@mylaurier.ca</a></span>", "<span class="string">519 496 2688</span>" ]
                 </div>
 
             </div>
