--- a/index.html
+++ b/index.html
@@ -22,19 +22,7 @@
     <!-- Javascripts -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/vendor/foundation.min.js"></script>
-    <script src="https://cdn.smooch.io/smooch.min.js"></script>
-
-    <script>
-        Smooch.init({ 
-            appToken: '87hnxvcqvf4aj6as4psszdujq',
-            customText: {
-                headerText: 'How can I help?',
-                inputPlaceholder: 'Type a message...',
-                introductionText: 'I\'m here to talk, so ask me anything!',
-                sendButtonText: 'Send',
-            }
-        });
-    </script>
+    
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -93,10 +81,10 @@
 
                         <span class="input">>>></span> employment<br />
                         {<br />
-                        &nbsp;&nbsp; "<span class="string">current1</span>": "<span class="string">marketing & analytics @ Smile.io</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">current1</span>": "<span class="string">software developer @the co-operators</span>",<br />
                         &nbsp;&nbsp; "<span class="string">current2</span>": "<span class="string">vp of technology @ Laurier Investment and Finance Association</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">current3</span>": "<span class="string">vp of mentorship @ Laurier Association of Double Degree Students</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">current4</span>": "<span class="string">freelance photographer</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">current3</span>": "<span class="string">freelance photographer</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">april 2018-aug 2018</span>": "<span class="string">marketing & analytics @ Smile.io</span>",<br />
                         &nbsp;&nbsp; "<span class="string">apr 2017 - aug 2017</span>": "<span class="string">operations analyst @ Hungry Jacks Australia</span>",<br />
                         &nbsp;&nbsp; "<span class="string">aug 2015 - sept 2016</span>": "<span class="string">customer service lead @ Movati Athletic</span>",<br />
                         
