--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                         </div>
                         <div id="terminal">
                             <span class="input">>>></span> location<br />
-                            <span class="string">Waterloo, ON</span><br /><br />
+                            <span class="string">waterloo, ontario, canada</span><br /><br />
 
                             <span class="input">>>></span> education<br />
                             {<br />
-                            &nbsp;&nbsp; "<span class="string">school</span>": "<span class="string">Wilfrid Laurier University</span>",<br />
+                            &nbsp;&nbsp; "<span class="string">school</span>": "<span class="string">wilfrid laurier university</span>",<br />
                             &nbsp;&nbsp; "<span class="string">degree1</span>": "<span class="string">business administration</span>",<br />
                             &nbsp;&nbsp; "<span class="string">degree2</span>": "<span class="string">computer science</span>",<br />
-                            &nbsp;&nbsp; "<span class="string">graduating</span>": "<span class="string">April 2021</span>"<br />
+                            &nbsp;&nbsp; "<span class="string">graduating</span>": "<span class="string">april 2021</span>"<br />
                         }<br /><br />
 
                         <span class="input">>>></span> employment<br />
@@ -84,9 +84,9 @@
                         &nbsp;&nbsp; "<span class="string">current1</span>": "<span class="string">software developer @the co-operators</span>",<br />
                         &nbsp;&nbsp; "<span class="string">current2</span>": "<span class="string">vp of technology @ Laurier Investment and Finance Association</span>",<br />
                         &nbsp;&nbsp; "<span class="string">current3</span>": "<span class="string">freelance photographer</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">april 2018-aug 2018</span>": "<span class="string">marketing & analytics @ Smile.io</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">apr 2017 - aug 2017</span>": "<span class="string">operations analyst @ Hungry Jacks Australia</span>",<br />
-                        &nbsp;&nbsp; "<span class="string">aug 2015 - sept 2016</span>": "<span class="string">customer service lead @ Movati Athletic</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">apr 2018 - aug 2018</span>": "<span class="string">marketing & analytics @ smile.io</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">apr 2017 - aug 2017</span>": "<span class="string">operations analyst @ hungry jacks australia</span>",<br />
+                        &nbsp;&nbsp; "<span class="string">aug 2015 - sept 2016</span>": "<span class="string">customer service lead @ movati athletic</span>",<br />
                         
                     }<br /><br />
 
@@ -94,10 +94,10 @@
                     [ "<span class="string">photography</span>", "<span class="string">web development</span>", "<span class="string">hiking</span>", "<span class="string">design</span>", "<span class="string">poker</span>","<span class="string">rugby</span>"]<br /><br />
 
                     <span class="input">>>></span> programming languages<br />
-                    [ "<span class="string">Python</span>", "<span class="string">Java</span>", "<span class="string">C</span>", "<span class="string">Visual Basic</span>"]<br /><br />
+                    [ "<span class="string">python</span>", "<span class="string">java</span>", "<span class="string">c</span>", "<span class="string">visual basic</span>"]<br /><br />
 
                     <span class="input">>>></span> software<br />
-                    [ "<span class="string">Illustrator</span>", "<span class="string">Photoshop</span>", "<span class="string">Sketch</span>", "<span class="string">Proto.io</span>", "<span class="string">Final Cut Pro X</span>"]<br /><br />
+                    [ "<span class="string">illustrator</span>", "<span class="string">photoshop</span>", "<span class="string">sketch</span>", "<span class="string">proto.io</span>", "<span class="string">final cut pro x</span>"]<br /><br />
 
                     <span class="input">>>></span> contact<br />
                     [ "<span class="string"><a href="mailto:fish1440@mylaurier.ca">fish1440@mylaurier.ca</a></span>", "<span class="string">519 496 2688</span>" ]
